--- a/.gitignore
+++ b/.gitignore
@@ -1,64 +1,43 @@
-# Общие системные файлы
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
 data
+mongo-init.js
 
-# Файлы редакторов/IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-*.sublime-*
 
-# Логи
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 lerna-debug.log*
 
-# Runtime данные
 pids
 *.pid
 *.seed
 *.pid.lock
 
-# Coverage directory used by tools like istanbul
 coverage/
 *.lcov
 
-# Dependency directories
+.nyc_output
+
 node_modules/
 jspm_packages/
 
-# Optional npm cache directory
+*.tsbuildinfo
+
 .npm
 
-# Optional eslint cache
 .eslintcache
 
-# Microbundle cache
 .rpt2_cache/
 .rts2_cache_cjs/
 .rts2_cache_es/
 .rts2_cache_umd/
 
-# Optional REPL history
 .node_repl_history
 
-# Output of 'npm pack'
 *.tgz
 
-# Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
 .env
 .env.test
 .env.production
@@ -67,32 +46,35 @@ jspm_packages/
 .env.test.local
 .env.production.local
 
-# parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
 
-# next.js build output
 .next
 
-# nuxt.js build output
 .nuxt
+dist
 
-# vuepress build output
+.cache/
+public
+
 .vuepress/dist
 
-# Serverless directories
 .serverless/
 
-# FuseBox cache
 .fusebox/
 
-# DynamoDB Local files
 .dynamodb/
 
-# TernJS port file
 .tern-port
 
-# OS generated files
+.vscode-test
+
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
 .DS_Store
 .DS_Store?
 ._*
@@ -100,3 +82,38 @@ jspm_packages/
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+docker-compose.override.yml
+
+dist/
+build/
+
+tmp/
+temp/
+
+pids
+*.pid
+*.seed
+*.pid.lock
+
+.npm
+
+.node_repl_history
+
+*.tgz
+
+.yarn-integrity
+
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+
+.vscode-test
+
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
