--- a/package.json
+++ b/package.json
@@ -1,58 +1,59 @@
 {
-  "name": "refme",
+  "name": "refme-server",
   "version": "1.0.0",
-  "description": "",
-  "main": "dist/app.js",
+  "description": "Refme server by NajmLabs",
+  "main": "dist/server.js",
   "scripts": {
-    "dev": "nodemon",
+    "dev": "nodemon src/server.ts",
     "build": "tsc",
-    "start": "node -r tsconfig-paths/register dist/index.js",
-    "init-db": "docker-compose up -d"
+    "start": "node dist/server.js",
+    "db": "docker-compose up -d mongo"
   },
-  "keywords": [],
-  "author": "",
+  "author": {
+    "name": "Alim Mambetov",
+    "email": "alim.mambetov.8866@gmail.com"
+  },
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "axios": "^1.9.0",
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
-    "bcryptjs": "^3.0.2",
+    "bcryptjs": "^3.0.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.18.3",
-    "morgan": "^1.10.0",
+    "mongoose": "^9.0.0",
+    "morgan": "^1.10.1",
     "ms": "^2.1.3",
-    "nodemailer": "^7.0.3",
+    "nodemailer": "^7.0.12",
     "passport": "^0.7.0",
     "passport-apple": "^2.0.2",
     "passport-google-oauth20": "^2.0.0",
-    "qs": "^6.14.0"
+    "qs": "^6.14.0",
+    "uuid": "^13.0.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^2.4.6",
-    "@types/cookie-parser": "^1.4.8",
-    "@types/cors": "^2.8.18",
+    "@types/cookie-parser": "^1.4.10",
+    "@types/cors": "^2.8.19",
     "@types/dotenv": "^6.1.1",
-    "@types/express": "^5.0.2",
-    "@types/express-session": "^1.18.1",
-    "@types/jsonwebtoken": "^9.0.9",
+    "@types/express": "^5.0.5",
+    "@types/express-session": "^1.18.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
-    "@types/morgan": "^1.9.9",
+    "@types/morgan": "^1.9.10",
     "@types/ms": "^2.1.0",
-    "@types/node": "^22.15.21",
-    "@types/nodemailer": "^6.4.17",
+    "@types/node": "^24.10.1",
+    "@types/nodemailer": "^7.0.5",
     "@types/passport": "^1.0.17",
-    "@types/passport-apple": "^2.0.3",
-    "@types/passport-google-oauth20": "^2.0.16",
-    "nodemon": "^3.1.10",
+    "@types/passport-google-oauth20": "^2.0.17",
+    "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.9.3"
   }
 }
