--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,28 +4,19 @@
 		"module": "commonjs",
 		"typeRoots": [
 			"./node_modules/@types",
-			"./src/types",
+			"./src/core/types",
 		],
 		"lib": [
 			"ES2020"
 		],
-		"strict": true,
-		"esModuleInterop": true,
-		"moduleResolution": "node",
-		"resolveJsonModule": true,
-		"forceConsistentCasingInFileNames": true,
-		"skipLibCheck": true,
-		"baseUrl": "./src",
-		"rootDir": "./src",
 		"outDir": "./dist",
-		"paths": {
-			"@/*": [
-				"./*"
-			],
-			"&/*": [
-				"../data/*"
-			]
-		}
+		"rootDir": "./src",
+		"strict": true,
+		"moduleResolution": "node",
+		"esModuleInterop": true,
+		"skipLibCheck": true,
+		"forceConsistentCasingInFileNames": true,
+		"resolveJsonModule": true
 	},
 	"include": [
 		"src"
